apps/k8s/frontend/overlays/production/ingress.yaml
# Currently this patch is only for overriding domain to 'k8s-test.codedang.com'
# One day 'codedang.com' takes place, this patch file can be removed.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8s-test.codedang.com # TODO: Replace this with actual domain
      secretName: frontend-tls
  rules:
    - host: k8s-test.codedang.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 5525
